--- a/deps/template.tex
+++ b/deps/template.tex
@@ -244,6 +244,9 @@ $if(graphics)$
 \def\fps@figure{htbp}
 \makeatother
 $endif$
+% For strikeout in LaTex
+\usepackage[normalem]{ulem}
+\pdfstringdefDisableCommands{\renewcommand{\sout}{}}
 %%%%%%%%%%%%%%%%%%%%%%%%%% END Pandoc Preamble %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
