add adjust box for table rotation
https://tex.stackexchange.com/questions/25369/how-to-rotate-a-table

--- a/deps/template.tex
+++ b/deps/template.tex
@@ -51,6 +51,8 @@
 \usepackage{array}                      % 調整表格高度
 \usepackage{longtable}                  % 支援跨頁長表格
 \usepackage{paralist}                   % 列表環境
+% https://tex.stackexchange.com/questions/25369/how-to-rotate-a-table
+\usepackage{adjustbox}                  % 旋轉表格
 
 
 %%%%%%%%%%%% Pandoc Preamble %%%%%%%%%%%%%%
